# jobfinder

./: .gitignore  Makefile  README.md  invalid_companies.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml  quality.yml  smoke.yml
jobfinder/: __init__.py  api.py  cli.py  config.py  db.py  filtering.py  logging_utils.py  models.py  pipeline.py  serpapi_cache.py  storage.py  web.py
jobfinder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jobfinder/alerts/: companies.py  emailer_gmail.py  saved_search_worker.py  state.py  worker_email.py
jobfinder/providers/: __init__.py  _http.py  ashby.py  breezy.py  comeet.py  greenhouse.py  icims.py  jobvite.py  lever.py  recruitee.py  smartrecruiters.py  workable.py  workday.py
jobfinder/search/: __init__.py  company_search.py
jobfinder/static/: app.js  companies.json  search.js  search_email.js
jobfinder/templates/: index.html  search.html  search_email.html
jobfinder/utils/: geo.py
reports/: junit-smoke.xml
scripts/: discover_one_city_provider.py  jobfinder_cli.py
tests/: conftest.py  test_api_e2e.py  test_filtering.py  test_http.py  test_pipeline.py
tests/e2e/: test_ui_e2e.py
tests/fixtures/: comeet_positions.json  greenhouse_jobs.json  lever_postings.json
tests/integration/: conftest.py  test_api_integration.py  test_jobs_only_new.py  test_refresh_dedupe.py  test_refresh_partial_failure.py
tests/smoke/: test_prod_search_smoke.py
tests/unit/: test_alert_state.py  test_api_unit.py  test_filtering_title_keywords.py  test_pipeline_extract_org.py  test_saved_search_worker.py  test_slug_validation.py
tests/unit/providers/: contract.py  test_comeet_provider.py  test_greenhouse_provider.py  test_lever_provider.py  test_other_providers.py
