[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobfinder"
version = "0.2.0"
description = "Async CLI + Flask API + Web UI to discover companies and fetch jobs from ATS providers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "You"}]
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.3",
    "rich>=13.7.1",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.1",
    "flask>=3.0.0",
]

[project.optional-dependencies]
extras = ["rapidfuzz>=3.9.1"]

[project.scripts]
jobfinder = "jobfinder.cli:app"
jobfinder-api = "jobfinder.api:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
jobfinder = ["templates/*.html", "static/*", "static/**/*"]

[tool.setuptools.packages.find]
where = ["."]
